data/derived/sp14/progs/unify/prog0798.ml.out
Characters 169-203:
  | Average (ex1,ex2) -> (eval (ex1,x,y) +. eval (ex2,x,y)) / 2.
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
